[css-grid] Constify track sizing algorithm

All the methods used to run the track sizing algorithm should not modify the
state of LayoutGrid. We can safely const-ify all of them and remove the ugly
const_cast in computeIntrinsicLogicalWidths().

No new tests needed as there is no change in behavior.

BUG=627812

Review-Url: https://codereview.chromium.org/2150533003
Cr-Commit-Position: refs/heads/master@{#405441}

Former-commit-id: ae5148ba4a2c164b809d59c4bca390e77b5124c5